# AliceO2

./: CMakeLists.txt
DataDistribution/: CMakeLists.txt
DataDistribution/Common/: CMakeLists.txt
DataDistribution/Common/src/: FilePathUtils.cxx  SubTimeFrameDPL.cxx  SubTimeFrameDataModel.cxx  SubTimeFrameFile.cxx  SubTimeFrameFileReader.cxx  SubTimeFrameFileSink.cxx  SubTimeFrameFileWriter.cxx  SubTimeFrameUtils.cxx  SubTimeFrameVisitors.cxx
DataDistribution/Common/test/: test_FilePathUtils.cxx
DataDistribution/ReadoutEmulator/src/: CruEmulator.cxx  CruMemoryHandler.cxx  ReadoutDevice.cxx  runReadoutEmulatorDevice.cxx
DataDistribution/SubTimeFrameBuilder/src/: SubTimeFrameBuilderDevice.cxx  SubTimeFrameBuilderInput.cxx  runSubTimeFrameBuilderDevice.cxx
DataDistribution/SubTimeFrameSender/: CMakeLists.txt
DataDistribution/SubTimeFrameSender/src/: SubTimeFrameSenderDevice.cxx  SubTimeFrameSenderOutput.cxx  runSubTimeFrameSenderDevice.cxx
DataDistribution/TimeFrameBuilder/src/: TimeFrameBuilderDevice.cxx  TimeFrameBuilderInput.cxx  runTimeFrameBuilderDevice.cxx
DataDistribution/run/: start_Emulator-3FLP-3EPN.sh.in  start_ReadoutEMU-FLP-EPN.sh.in
DataDistribution/run/readout_cfg/: readout_emu.cfg
DataDistribution/test/dpl/: test_StfBuilderDplAdapter.cxx
DataFormats/Headers/src/: DataHeader.cxx
Utilities/: CMakeLists.txt
Utilities/DataDistribution/: CMakeLists.txt
Utilities/DataDistribution/test/DplAdapter/: CMakeLists.txt  start_StfDplAdapterTest.sh.in  test_StfDplAdapter.cxx
cmake/: O2Dependencies.cmake
(+70 files in other folders)
